+ session repo + listener