@@ -5,10 +5,11 @@ import jakarta.persistence.Entity;
 import lombok.*;
 import lombok.experimental.SuperBuilder;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.Date;
-import java.util.List;
 
 @Entity
 @AllArgsConstructor
@@ -26,11 +27,14 @@ public class Customer extends User {
     private String phoneNumber;
     private boolean isEnabled;
 
+    // khuyến khích việc sử dụng getAuthoritíes() hơn là getRoles(),
+    // trong thực tế gàm getRoles() gây một số khó khắn trong việc xác định quyền tại lớp Security
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(() -> "ROLE_CUSTOMER");
+        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_CUSTOMER"));
     }
 
+    // xác định trạng thái tài khoản bị khóa
     @Override
     public boolean isEnabled() {
         return isEnabled;
